--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     
     <link rel="manifest" href="./manifest.json" />
     <link rel="stylesheet" href="./reset.css" />
+    <script src="https://use.fontawesome.com/677d5ca6ad.js"></script>
 
     <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script> -->
     
