fixed bug for storage

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,15 @@
     <link rel="manifest" href="./manifest.json" />
     <link rel="stylesheet" href="./reset.css" />
     <script src="https://use.fontawesome.com/677d5ca6ad.js"></script>
+    <script>
+      Storage.prototype.setObj = function(key, obj) {
+        return this.setItem(key, JSON.stringify(obj))
+      }
+      Storage.prototype.getObj = function(key) {
+        return JSON.parse(this.getItem(key))
+      }
+    </script>
+    
 
     <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script> -->
     
